--- a/src/styles/survey.css
+++ b/src/styles/survey.css
@@ -1,38 +1,43 @@
+.btnOption {
+    background-color: #fff7f70c;
+    border: .1rem solid #fff7f70c;
+    border-radius: 50%;
+    cursor: pointer;
+    color: var(--white);
+    font-weight: 500;
+    height: 4rem;
+    width: 4rem;
+}
+
+.btnOption:hover {
+    background-color: var(--orange);
+    color: var(--darkBlue);
+    font-weight: 500;
+}
+
 .btnSubmit {
     background-color: var(--orange);
     border: .1rem solid var(--orange);
     border-radius: 2rem;
-    cursor: pointer;
-    padding: .8rem;
-    width: 100%;
     color: black;
-    display: flex;
+    cursor: pointer;
     font-size: 1rem;
     font-weight: 700;
-    justify-content: center;
     letter-spacing: .1rem;
-    text-decoration: none;
+    padding: .8rem;
     text-transform: uppercase;
-    text-align: center;
+    width: 100%;
+}
+
+.btnSubmit:hover {
+    background-color: var(--white);
+    border: .1rem solid var(--white);
 }
 
 .surveyNumber {
     display: flex;
     flex-direction: row;
-    gap: 1.8rem;
+    gap: 1.4rem;
     list-style: none;
     padding: 1rem 0 1rem;
-}
-
-.surveyNumber li {
-    align-items: center;
-    background-color: #fff7f70c;
-    border-radius: 50%;
-    color: var(--white);
-    cursor: pointer;
-    display: flex;
-    height: 3.6rem;
-    justify-content: center;
-    margin: .5rem 0;
-    width: 4rem;
 }
