change styles to buttons

--- a/src/styles/survey.css
+++ b/src/styles/survey.css
@@ -34,10 +34,15 @@
     border: .1rem solid var(--white);
 }
 
+.active {
+    background-color: var(--white);
+    color: var(--darkBlue);
+}
+
 .surveyNumber {
     display: flex;
     flex-direction: row;
     gap: 1.4rem;
     list-style: none;
-    padding: 1rem 0 1rem;
+    padding: 2rem 0;
 }
