--- a/src/styles/thanksPage.css
+++ b/src/styles/thanksPage.css
@@ -9,3 +9,11 @@
 .ty-page p {
     text-align: center;
 }
+
+span {
+    background-color: #fff7f70c;
+    border-radius: 2rem;
+    color: var(--orange);
+    margin-top: 1.5rem;
+    padding: .5rem 2rem;
+}
